--- a/wildlife-photography/src/components/Navbar/Navbar.css
+++ b/wildlife-photography/src/components/Navbar/Navbar.css
@@ -1,22 +1,16 @@
 .navbar-container {
-	width: 100vw;
 	height: 78px;
 	background-color: #edece8;
-}
-
-.navbar-flexbox {
-	height: inherit;
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
 	align-items: center;
 }
 
-.navbar-flexbox h1 {
+.navbar-container h1 {
 	font-size: 2.25rem;
 	font-family: "Libre Bodoni";
 	font-weight: 400;
-	position: relative;
-	right: 125px;
+	margin-left: 50px;
 }
 
 .navbar-buttons-container {
@@ -26,8 +20,7 @@
 	gap: 89px;
 	color: #343433;
 	letter-spacing: 1.92px;
-	position: relative;
-	left: 133px;
+	margin-right: 50px;
 }
 
 .navbar-buttons-container h2 {
@@ -40,6 +33,3 @@
 .navbar-buttons-container h2:first-child {
 	font-weight: 500;
 }
-
-/* font-family: 'Libre Bodoni', serif;
-font-family: 'Montserrat', sans-serif; */
