--- a/wildlife-photography/src/components/Navbar/Navbar.css
+++ b/wildlife-photography/src/components/Navbar/Navbar.css
@@ -11,16 +11,27 @@
 	font-family: "Libre Bodoni";
 	font-weight: 400;
 	margin-left: 50px;
+	margin-right: 15px;
+	white-space: nowrap;
 }
 
 .navbar-buttons-container {
 	display: flex;
-	justify-content: space-around;
+	margin-right: 50px;
+}
+
+.navbar-buttons-titles {
+	display: flex;
 	align-items: center;
-	gap: 89px;
-	color: #343433;
+	gap: 73px;
 	letter-spacing: 1.92px;
 	margin-right: 50px;
+}
+
+@media (max-width: 1112px) {
+	.navbar-buttons-titles {
+		display: none;
+	}
 }
 
 .navbar-buttons-container h2 {
