Homepage slider refactor

--- a/wildlife-photography/src/components/HomepageSlider/HomepageSlider.css
+++ b/wildlife-photography/src/components/HomepageSlider/HomepageSlider.css
@@ -15,19 +15,13 @@
 	vertical-align: middle;
 }
 
-.homepage-slider-container h1,
-.homepage-slider-container h2 {
-	margin: 0;
-}
-
 .slider-title {
 	font-family: "Libre Bodoni";
-	font-size: 3.75rem;
+	font-size: clamp(1.7rem, 6vw, 3.75rem);
 	font-weight: 400;
 	letter-spacing: 3px;
 	color: var(--slider-text-color);
-	width: 100%;
-	white-space: nowrap;
+	text-align: center;
 }
 
 .slider-upper-title,
@@ -42,7 +36,7 @@
 }
 
 .white-stripe {
-	width: 65px;
+	width: clamp(50px, 6vw, 65px);
 	height: 1px;
 	background-color: var(--slider-text-color);
 	opacity: 0.55;
@@ -51,44 +45,17 @@
 .slider-upper-title-container {
 	display: flex;
 	align-items: center;
-	gap: 25px;
+	gap: 20px;
 }
 
-.slider-upper-title-container,
-.slider-title,
-.slider-bottom-title {
+.slider-content-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
 	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	text-align: center;
-}
-
-.slider-upper-title-container {
-	top: 43%;
-}
-
-.slider-bottom-title {
-	top: 57%;
-}
-
-@media (max-width: 930px) {
-	.slider-title {
-		font-size: 6.2vw;
-	}
-}
-
-@media (max-width: 630px) {
-	.slider-title {
-		white-space: nowrap;
-		font-size: 5.45vw;
-	}
-
-	.slider-upper-title-container {
-		top: 45%;
-	}
-
-	.slider-bottom-title {
-		top: 55%;
-	}
+	height: 100%;
+	top: 0;
+	left: 0;
 }
