--- a/wildlife-photography/src/components/HomepageSlider/HomepageSlider.css
+++ b/wildlife-photography/src/components/HomepageSlider/HomepageSlider.css
@@ -55,7 +55,7 @@
 	justify-content: center;
 	width: 100%;
 	position: absolute;
-	height: 100%;
-	top: 0;
-	left: 0;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
