--- a/wildlife-photography/src/components/Navbar/Navbar.css
+++ b/wildlife-photography/src/components/Navbar/Navbar.css
@@ -1,10 +1,14 @@
+#root {
+	--navbar-background: #edece8;
+}
+
 .menu-icon {
 	display: none;
 }
 
 .navbar-container {
 	height: 78px;
-	background-color: #edece8;
+	background-color: var(--navbar-background);
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -42,8 +46,46 @@
 	font-weight: 500;
 }
 
+.navbar-list {
+	display: flex;
+	width: 40%;
+	height: 30%;
+	justify-content: center;
+	background-color: var(--navbar-background);
+	position: absolute;
+	top: 0;
+	left: 30%;
+	z-index: 2;
+}
+
+.navbar-list .navbar-buttons-list h2 {
+	display: block;
+	justify-content: center;
+}
+
+.navbar-list .navbar-buttons-list {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	align-content: center;
+	gap: 20px;
+}
+
+.dim {
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	background-color: black;
+	opacity: 0.65;
+	z-index: 1;
+	left: 0;
+	top: 0;
+}
+
 @media (max-width: 980px) {
-	.navbar-buttons-titles {
+	.navbar-buttons-titles h2 {
 		display: none;
 	}
 
@@ -52,3 +94,5 @@
 		margin-right: 50px;
 	}
 }
+
+
