Changing projects with buttons

--- a/src/components/LatestProjects/LatestProjects.css
+++ b/src/components/LatestProjects/LatestProjects.css
@@ -104,6 +104,7 @@
 	font-weight: 600;
 	color: var(--project-name-title);
 	letter-spacing: 6.5px;
+	text-transform: uppercase;
 }
 
 .bottom-latest-projects div {
