--- a/src/components/LatestProjects/LatestProjectsPhotos.css
+++ b/src/components/LatestProjects/LatestProjectsPhotos.css
@@ -1,3 +1,6 @@
 .royal-bengal-tiger {
 	background-image: url("../../assets/LatestProjects/image1.jpg");
 }
+.rhinos {
+	background-image: url("../../assets/LatestProjects/image2.jpg");
+}
