Added margin, better look on smaller resolution

--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -16,6 +16,7 @@
 	max-width: 1200px;
 	padding: 0px 40px;
 	box-sizing: border-box;
+	margin-bottom: 20px;
 }
 
 .content-container > div:first-child {
