Displaying name of animal in gallery section

--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -11,36 +11,6 @@
 
 .grid img {
 	width: 100%;
-	max-height: 100%;
-	margin-bottom: 12px;
-}
-
-@media (max-width: 800px) {
-	.gallery-container {
-		overflow: hidden;
-	}
-	.grid {
-		column-count: 2;
-		column-gap: 6px;
-	}
-
-	.grid img {
-		margin-bottom: 6px;
-	}
-}
-
-@media (max-width: 600px) {
-	.grid {
-		column-count: 1;
-	}
-
-	.grid img {
-		margin-bottom: 12px;
-	}
-
-	.grid img:last-child {
-		margin-bottom: 0;
-	}
 }
 
 .gallery-container h2 {
@@ -63,8 +33,30 @@
 .gallery-button-container {
 	display: flex;
 	flex-direction: column;
-	cursor: pointer;
 	align-items: center;
-	margin-top: 100px;
 	margin-bottom: 100px;
+}
+
+.gallery-button-container span {
+	cursor: pointer;
+}
+
+@media (max-width: 800px) {
+	.gallery-container {
+		overflow: hidden;
+	}
+	.grid {
+		column-count: 2;
+		column-gap: 6px;
+	}
+
+	.grid img {
+		margin-bottom: 6px;
+	}
+}
+
+@media (max-width: 600px) {
+	.grid {
+		column-count: 1;
+	}
 }
