--- a/src/components/HomepageSlider/HomepageSlider.css
+++ b/src/components/HomepageSlider/HomepageSlider.css
@@ -21,6 +21,8 @@
 	letter-spacing: 3px;
 	color: var(--slider-text-color);
 	text-align: center;
+	animation: fade; /* referring directly to the animation's @keyframe declaration */
+	animation-duration: 2.5s; /* don't forget to set a duration! */
 }
 
 .slider-upper-title,
@@ -45,6 +47,13 @@
 	display: flex;
 	align-items: center;
 	gap: 20px;
+	animation: fade;
+	animation-duration: 3.5s;
+}
+
+.slider-bottom-title {
+	animation: fade;
+	animation-duration: 3.5s;
 }
 
 .slider-content-container {
@@ -57,6 +66,7 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	gap: 22px;
 }
 
 @media (max-width: 444px) {
