--- a/src/components/HomepageSlider/HomepageSlider.css
+++ b/src/components/HomepageSlider/HomepageSlider.css
@@ -4,7 +4,7 @@
 
 .homepage-slider-container {
 	width: 100%;
-	height: calc(100vh - 78px);
+	height: calc(100vh);
 }
 
 .homepage-slider-container img {
