Correct display of text on Gallery images

--- a/src/components/Gallery/SingleImage.css
+++ b/src/components/Gallery/SingleImage.css
@@ -15,6 +15,7 @@
 	left: 50%;
 	transform: translate(-50%, -50%);
 	opacity: 0;
+	line-height: 2rem;
 }
 
 .image-wrapper:hover > .image-description {
